--- a/setup.cfg
+++ b/setup.cfg
@@ -58,23 +58,24 @@ python_requires = >= 3.9
 
 [options.extras_require]
 dev =
-    black
-    flake8
-    flake8-bugbear
-    flake8-docstrings
-    pep8-naming
-    mypy
-    pydocstyle
-    coverage
-    pytest
-    pytest-cov
-    pytest-watch
-    pytest-xdist
-    pre-commit
-    sphinx
-    sphinx-rtd-theme
-    tox
-    types-setuptools
+    black~=23.7.0
+    flake8~=6.1.0
+    flake8-bugbear~=23.7.10
+    flake8-docstrings~=1.7.0
+    pep8-naming~=0.13.3
+    mypy~=1.5.1
+    pydocstyle~=6.3.0
+    coverage~=7.3.0
+    pytest~=7.4.0
+    pytest-cov~=4.1.0
+    pytest-watch~=4.2.0
+    pytest-xdist~=3.3.1
+    pre-commit~=3.3.3
+    sphinx~=3.2.1
+    sphinx-rtd-theme~=0.5.0
+    tox~=4.11.0
+    types-setuptools~=68.1.0.0
+    Jinja2<3.1
 
 [options.entry_points]
 # Put your entry point scripts here
